fix section 1
