# dist/openapi.yaml
@@ -255,36 +255,38 @@ paths:
             schema:
               $ref: '#/components/schemas/Like' 
 
-  # /users//myRecipes/{recipeId}
+  # /users/myRecipes/{recipeId}
   /users/myRecipes/{recipeId}:
     get:
-    tags:
-    - Recipes
-    summary: Return preview details on recipe by his ID
-    description: Return preview details on recipe by his ID
-    security:
-      - ApiKeyAuth: [] 
-    parameters:
-    - name: recipeId
-      in: path
-      description: recipe's id
-      required: true
-      style: simple
-      explode: false
-      schema:
-        type: integer
-    responses:
-      "200":
-        description: data about the recipe
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RecipePreview'
-      "404":
-        description: recipeId is not exists
-        $ref: '#/components/responses/NotFound'
+      tags:
+      - Users
+      summary: Return preview details on recipe by his ID
+      description: Return preview details on recipe by his ID
+      security:
+        - ApiKeyAuth: [] 
+      parameters:
+      - name: recipeId
+        in: path
+        description: recipe's id
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: data about the recipe
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RecipePreview'
+        '401':
+          description: User is not authorized
+        "404":
+          description: recipeId is not exists
+          $ref: '#/components/responses/NotFound'
 
-  # /users//checkWatched/:recipeId
+  # /users/checkWatched/:recipeId
   /users/checkWatched/{recipeId}:
     get:
       tags:
@@ -296,8 +298,10 @@ paths:
           description: Successfully true\false if the recipe exists
         '400':
           description: 'invalid input, object invalid'
+        '401':
+          description: User is not authorized
 
-  # /users//checkWatched/:recipeId
+  # /users/checkWatched/:recipeId
   /users/favorites/{recipeId}:
     get:
       tags:
@@ -318,8 +322,20 @@ paths:
       security:
       - cookieAuth: []
 
-
-
+  # /users/Like/{recipeId}
+  /users/Like/{recipeId}:
+    get:
+      tags:
+        - Users
+      summary: Get True\False if recipe liked by login user
+      description: Return True\False for liked recipe by login user
+      responses:
+        '200':
+          description: Successfully true\false if the recipe exists
+        '400':
+          description: 'invalid input, object invalid'
+        '401':
+          description: User is not authorized
       
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 # End of users routes
